# Pot

./: CMakeLists.txt  sdkconfig
.devcontainer/: devcontainer.json
ManufacturingData/: values.csv  values_tmp.csv
ManufacturingData/csv/: Pot-1.csv
main/: CMakeLists.txt  HMI.c  HMI.h  idf_component.yml  main.c
main/peripherials/Led/: Led.c
main/peripherials/analogInput/: analogInput.c  analogInput.h
main/peripherials/moisture/: moisture.c  moisture.h
main/peripherials/sclibDS18B20/: sclibDS18B20.c  sclibDS18B20.h
main/sclib/helpers/: sclib_helpers.c  sclib_helpers.h
main/sclib/hmi_tools/: hmi_tools.c
main/services/NVS/: nvs_manager.c  nvs_manager.h
main/services/mqtt/: mqtt.c
