idf_component_register(SRCS "HMI.c" "main.c" "sclib/hmi_tools/hmi_tools.c" "sclib/alarms/alarms.c" "peripherials/led/led.c" "services/battery/battery.c" "services/mqtt/mqtt.c" "services/mqtt/home_assistant/home_assistant.c" "services/Wifi/Wifi.c" "services/NVS/nvs_manager.c" "peripherials/thermocouple_spi/thermocouple_spi.c"
                       INCLUDE_DIRS "." "sclib/hmi_tools" "sclib/alarms" "peripherials/led" "services/battery" "services/mqtt" "services/Wifi" "services/NVS" "peripherials/thermocouple_spi")